added animation for main hero heading

--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
       </video>
       <div class="sc-text-cstm-2">
         <h1 class="landing-detail-page" data-aos="fade-left">
-          video production company in dubai
+          Moonbox
+          <span
+            class="txt-rotate"
+            data-period="100"
+            data-rotate='[ "Video Production", "in Dubai" ]'
+          ></span>
         </h1>
         <h2 data-aos="fade-right">
           We craft content that tells your authentic story - from great ideas to
@@ -145,19 +150,19 @@
 
               <div class="list-ft-outer" data-aos="fade-right">
                 <div class="single-ft">
-                  <div class="ft-icon">
+                  <div class="ft-icon circle pulse">
                     <i class="fa-solid fa-check"></i>
                   </div>
                   <span>Corporate Videos</span>
                 </div>
                 <div class="single-ft">
-                  <div class="ft-icon">
+                  <div class="ft-icon circle pulse">
                     <i class="fa-solid fa-check"></i>
                   </div>
                   <span>Product Videos</span>
                 </div>
                 <div class="single-ft">
-                  <div class="ft-icon">
+                  <div class="ft-icon circle pulse">
                     <i class="fa-solid fa-check"></i>
                   </div>
                   <span>Event Videos</span>
