added animations and responsiveness

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
   <body>
     <!-- Header Part -->
-    <header class="header py-3">
+    <header class="header bgBlur py-3">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4">
             <a class="text-decoration-none text-black" href="index.html">
               <h2 class="site_heading">Moonbox</h2>
               <!-- <img
@@ -66,7 +66,7 @@
             /> -->
             </a>
           </div>
-          <div class="col-lg-8 col-md-8 col-sm-8">
+          <div class="col-lg-8 col-md-8">
             <ul class="new-menu">
               <li>
                 <a href="tel:04-2696733"><i class="fa-solid fa-headset"></i></a>
@@ -136,7 +136,7 @@
               Video Production
             </h1>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="content-part-m">
               <p class="sec-para" data-aos="fade-left">
                 It’s not just lights, sound, camera, action-and cut! We do it
@@ -196,7 +196,7 @@
               <a data-aos="fade-up-left" class="read-btn" href="#">Read more</a>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-sm-mt-3">
             <div class="imgs-side">
               <img
                 data-aos="fade-down-right"
@@ -233,7 +233,7 @@
             <h1 class="sec-main-heading" data-aos="fade-down">Photography</h1>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-sm-mb-3">
             <div class="imgs-side">
               <img
                 data-aos="fade-down-right"
@@ -317,7 +317,9 @@
                 </div>
               </div>
 
-              <a data-aos="fade-up-left" class="read-btn" href="#">Read more</a>
+              <a data-aos="fade-up-left" class="read-btn read-btm-mob" href="#"
+                >Read more</a
+              >
             </div>
           </div>
         </div>
@@ -379,10 +381,12 @@
                   <span>Sound Design</span>
                 </div>
               </div>
-              <a data-aos="fade-up-left" class="read-btn" href="#">Read more</a>
+              <a data-aos="fade-up-left" class="read-btn read-btm-mob" href="#"
+                >Read more</a
+              >
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-sm-mt-7">
             <div class="imgs-side">
               <img
                 data-aos="fade-down-right"
@@ -421,7 +425,7 @@
             </h1>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-sm-mb-3">
             <div class="imgs-side">
               <img
                 data-aos="fade-down-right"
@@ -665,9 +669,6 @@
     <!-- Map Part -->
     <div class="map-part">
       <div class="map-wrapper">
-        <div class="map-heading">
-          <h1 class="sec-main-heading text-center">Where to find us</h1>
-        </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.3405258620764!2d55.27896171556288!3d25.225453133883004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43e06f328a97%3A0x9f8edba90d7cdeb3!2sMoonbox%20-%20Branding%20Agency%20in%20Dubai!5e0!3m2!1sen!2s!4v1673866589222!5m2!1sen!2s"
           width="600"
@@ -689,7 +690,7 @@
               Let's Capture Wonder
             </h1>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="form-side">
               <form>
                 <div class="row g-2">
@@ -755,7 +756,7 @@
               </form>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-sm-mt-4">
             <div class="footer-lft form-logo-lft">
               <a href="index.html" data-aos="fade-right">
                 <img
